fix: Fix overflow for some screen
# AU: Auth
# BA: Batch
# FR: Frontend
# HO: Host
# MQ: MQTT
# MK: Mock
# MT: Motor
# OB: Observability
# PR: Proxy
# LI: Library
# MC: MQTT2Cache
# GA: Gadgets
# AL: Alarms
# DK: Desktop app
# AT: Audit Trail
# DY: Discovery
# IN: Installer
# TO: DevTools of the repo (docker include)
# MO: Model

[Deprecated]
# MA: Manager
# SE: Setting (deprecated -> use TO instead)

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,4 +19,10 @@
 html,
 body {
   background-color: var(--color-tertiary);
+  overflow-x: hidden;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 0px;
 }
